Added volleyball service implementations.

--- a/src/main/resources/templates/volleyball.html
+++ b/src/main/resources/templates/volleyball.html
@@ -61,7 +61,7 @@
 			  <li class="active"><a th:href="@{/}" class="nav-link">Home</a></li>
                 <li><a th:href="@{football.html}" class="nav-link">Football</a></li>
                 <li><a th:href="@{basketball.html}" class="nav-link">Basketball</a></li>
-                <li><a th:href="@{vollyball.html}" class="nav-link">Vollyball</a></li>
+                <li><a th:href="@{volleyball.html}" class="nav-link">Volleyball</a></li>
                 <li><a th:href="@{contact.html}" class="nav-link">Contact</a></li>
               </ul>
             </nav>
@@ -78,7 +78,7 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-5 ml-auto">
-            <h1 class="text-white">Vollyball Matches Schedule</h1>
+            <h1 class="text-white">Volleyball Matches Schedule</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, molestias repudiandae pariatur.</p>
             <div id="date-countdown"></div>
             <p>
