--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,277 @@
-<!DOCTYPE html >
+<!DOCTYPE html>
+<html lang="en">
 <html xmlns:th="https://www.thymeleaf.org">
-    <head>
-        <meta charset="UTF-8">
-        <title>DATA</title>
-    </head>
-    <body>
-        <p>showData</p>
-    </body>
+
+<head>
+    <title>Support Tournaments&mdash; Schedule System </title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
+
+    <link rel="stylesheet" th:href="@{/fonts/icomoon/style.css}"/>
+
+    <link rel="stylesheet" th:href="@{/css/bootstrap/bootstrap.css}"/>
+    <link rel="stylesheet" th:href="@{/css/jquery-ui.css}"/>
+    <link rel="stylesheet" th:href="@{/css/owl.carousel.min.css}"/>
+    <link rel="stylesheet" th:href="@{/css/owl.theme.default.min.css}"/>
+    <link rel="stylesheet" th:href="@{/css/owl.theme.default.min.css}"/>
+
+    <link rel="stylesheet" th:href="@{/css/jquery.fancybox.min.css}"/>
+
+    <link rel="stylesheet" th:href="@{/css/bootstrap-datepicker.css}"/>
+
+    <link rel="stylesheet" th:href="@{/fonts/flaticon/font/flaticon.css}"/>
+
+    <link rel="stylesheet" th:href="@{/css/aos.css}"/>
+    <link rel="stylesheet" th:href="@{/css/style.css}"/>
+
+
+
+</head>
+
+
+<body>
+
+<div class="site-wrap">
+
+    <div class="site-mobile-menu site-navbar-target">
+        <div class="site-mobile-menu-header">
+            <div class="site-mobile-menu-close">
+                <span class="icon-close2 js-menu-toggle"></span>
+            </div>
+        </div>
+        <div class="site-mobile-menu-body"></div>
+    </div>
+
+
+    <header class="site-navbar py-4" role="banner">
+
+        <div class="container">
+            <div class="d-flex align-items-center">
+                <div class="site-logo">
+                    <a href="index.html">
+                        <img src="images/logo.png" alt="Logo">
+                    </a>
+                </div>
+                <div class="ml-auto">
+                    <nav class="site-navigation position-relative text-right" role="navigation">
+                        <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
+                            <li><a th:href="@{/}" class="nav-link">Home</a></li>
+                            <li><a th:href="@{football.html}" class="nav-link">Football</a></li>
+                            <li><a th:href="@{basketball.html}" class="nav-link">Basketball</a></li>
+                            <li><a th:href="@{volleyball.html}" class="nav-link">Volleyball</a></li>
+                            <li><a th:href="@{contact.html}" class="nav-link">Contact</a></li>
+                        </ul>
+                    </nav>
+
+                    <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right text-white"><span
+                            class="icon-menu h3 text-white"></span></a>
+                </div>
+            </div>
+        </div>
+
+    </header>
+
+    <div class="hero overlay" style="background-image: url('images/bg_3.jpg');">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-5 ml-auto">
+                    <h1 class="text-white">Sports Tournament System</h1>
+                    <p>A website where you can find upcoming Football, Baseball and Volleyball matches schedule and live matches scoors.</p>
+                    <p id="date"></p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="container">
+
+
+        <div class="row">
+            <div class="col-lg-12">
+
+                <div class="d-flex team-vs">
+                    <div class="team-1 w-50">
+                        <div class="team-details w-100 text-center">
+                            <h3>Supports Tournament</h3>
+
+                        </div>
+                    </div>
+                    <div class="team-2 w-50">
+                        <div class="team-details w-100 text-center">
+                            <h3>Schedule System</span></h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="site-section bg-dark">
+        <div class="container">
+            <div class="col-12 title-section">
+                <h2 class="heading">Football Matches Schedule</h2>
+            </div>
+
+            <div class="col-lg-12">
+                <div class="bg-light p-4 rounded">
+
+                    <div class="widget-next-match">
+                        <table class="table custom-table">
+                            <thead>
+                            <tr>
+                                <th scope="col">Team A</th>
+                                <th scope="col">Team B</th>
+                                <th scope="col">Match Date</th>
+                                <th scope="col">Match Timing</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr th:each="match: ${footballMatchs}">
+                                <td th:text="${match.teamA}"/>
+                                <td th:text="${match.teamB}"/>
+                                <td th:text="${match.date}"/>
+                                <td th:text="${match.time}"/>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> <!-- .site-section -->
+</div>
+
+
+<div class="site-section bg-light">
+    <div class="container">
+        <div class="col-12 title-section">
+            <h2 class="heading">Baseball Matches Schedule</h2>
+        </div>
+
+        <div class="col-lg-12">
+            <div class="bg-light p-4 rounded">
+
+                <div class="widget-next-match">
+                    <table class="table custom-table">
+                        <thead>
+                        <tr>
+                            <th scope="col">Team A</th>
+                            <th scope="col">Team B</th>
+                            <th scope="col">Match Date</th>
+                            <th scope="col">Match Timing</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="match: ${footballMatchs}">
+                            <td th:text="${match.teamA}"/>
+                            <td th:text="${match.teamB}"/>
+                            <td th:text="${match.date}"/>
+                            <td th:text="${match.time}"/>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div> <!-- .site-section -->
+</div>
+<div class="site-section bg-dark">
+    <div class="container">
+        <div class="col-12 title-section">
+            <h2 class="heading">Volleyball Matches Schedule</h2>
+        </div>
+
+        <div class="col-lg-12">
+            <div class="bg-light p-4 rounded">
+
+                <div class="widget-next-match">
+                    <table class="table custom-table">
+                        <thead>
+                        <tr>
+                            <th scope="col">Team A</th>
+                            <th scope="col">Team B</th>
+                            <th scope="col">Match Date</th>
+                            <th scope="col">Match Timing</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="match: ${footballMatchs}">
+                            <td th:text="${match.teamA}"/>
+                            <td th:text="${match.teamB}"/>
+                            <td th:text="${match.date}"/>
+                            <td th:text="${match.time}"/>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div> <!-- .site-section -->
+</div>
+<footer class="footer-section" style="margin: 0px; padding: 0px;">
+    <div class="bg-light p-4">
+        <div class="container">
+
+            <div class="row text-center">
+                <div class="col-md-12">
+                    <div class=" pt-4">
+                        <p>
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            Copyright &copy;
+                            <script>
+                  document.write(new Date().getFullYear());
+                </script> All rights reserved | This Site is created for <a href="https://www.accenture.com/" target="_blank">Accenture</a> Bootcamp Project
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+</footer>
+</div>
+
+<!-- .site-wrap -->
+
+<script >
+window.onload = setInterval(clock,1000);
+function clock()
+{
+    var d = new Date();
+    var date = d.getDate();
+    var year = d.getFullYear();
+    var month = d.getMonth();
+    var monthArr = ["January", "February","March", "April", "May", "June", "July", "August", "September", "October", "November","December"];
+    month = monthArr[month];
+    document.getElementById("date").innerHTML="Current Date: "+date+" "+month+", "+year;
+}
+</script>
+<script src="js/jquery-3.3.1.min.js"></script>
+<script src="js/jquery-migrate-3.0.1.min.js"></script>
+<script src="js/jquery-ui.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/jquery.stellar.min.js"></script>
+<script src="js/jquery.countdown.min.js"></script>
+<script src="js/bootstrap-datepicker.min.js"></script>
+<script src="js/jquery.easing.1.3.js"></script>
+<script src="js/aos.js"></script>
+<script src="js/jquery.fancybox.min.js"></script>
+<script src="js/jquery.sticky.js"></script>
+<script src="js/jquery.mb.YTPlayer.min.js"></script>
+
+
+<script src="js/main.js"></script>
+
+</body>
+
+
 </html>
