--- a/src/main/resources/templates/basketball.html
+++ b/src/main/resources/templates/basketball.html
@@ -51,8 +51,8 @@
       <div class="container">
         <div class="d-flex align-items-center">
           <div class="site-logo">
-            <a href="index.html">
-              <img src="images/logo.png" alt="Logo">
+            <a href="/#">
+              <img src="images/logo-nba-4096.png" alt="Logo" width="100" height="100">
             </a>
           </div>
           <div class="ml-auto">
@@ -74,17 +74,13 @@
 
     </header>
 
-    <div class="hero overlay" style="background-image: url('images/bg_3.jpg');">
+    <div class="hero overlay" style="background-image: url('images/basketballbg.jpg');">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-5 ml-auto">
-            <h1 class="text-white">Basketball Matches Schedule</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, molestias repudiandae pariatur.</p>
-            <div id="date-countdown"></div>
-            <p>
-              <a href="#" class="btn btn-primary py-3 px-4 mr-3">Book Ticket</a>
-              <a href="#" class="more light">Learn More</a>
-            </p>  
+            <h1 class="text-white">NBA Schedule</h1>
+            <p>2021-22 NBA Season May Schedule and Results</p>
+            <p id="date"></p>
           </div>
         </div>
       </div>
@@ -99,29 +95,29 @@
         <div class="col-lg-12">
           
           <div class="d-flex team-vs">
-            <span class="score">4-1</span>
+            <span class="score">[[${nextBasketballMatch.homePts}]]-[[${nextBasketballMatch.visitorPts}]]</span>
             <div class="team-1 w-50">
               <div class="team-details w-100 text-center">
-                <img src="images/logo_1.png" alt="Image" class="img-fluid">
-                <h3>LA LEGA <span>(win)</span></h3>
-                <ul class="list-unstyled">
-                  <li>Anja Landry (7)</li>
-                  <li>Eadie Salinas (12)</li>
-                  <li>Ashton Allen (10)</li>
-                  <li>Baxter Metcalfe (5)</li>
-                </ul>
+                <img src="images/TeamA.png" alt="Image" class="img-fluid">
+                <h3>[[${nextBasketballMatch.homeTeam}]]</h3>
+<!--                <ul class="list-unstyled">-->
+<!--                  <li>Anja Landry</li>-->
+<!--                  <li>Eadie Salinas</li>-->
+<!--                  <li>Ashton Allen</li>-->
+<!--                  <li>Baxter Metcalfe</li>-->
+<!--                </ul>-->
               </div>
             </div>
             <div class="team-2 w-50">
               <div class="team-details w-100 text-center">
-                <img src="images/logo_2.png" alt="Image" class="img-fluid">
-                <h3>JUVENDU <span>(loss)</span></h3>
-                <ul class="list-unstyled">
-                  <li>Macauly Green (3)</li>
-                  <li>Arham Stark (8)</li>
-                  <li>Stephan Murillo (9)</li>
-                  <li>Ned Ritter (5)</li>
-                </ul>
+                <img src="images/TeamB.png" alt="Image" class="img-fluid">
+                <h3>[[${nextBasketballMatch.visitorTeam}]]</h3>
+<!--                <ul class="list-unstyled">-->
+<!--                  <li>Macauly Green</li>-->
+<!--                  <li>Arham Stark</li>-->
+<!--                  <li>Stephan Murillo</li>-->
+<!--                  <li>Ned Ritter</li>-->
+<!--                </ul>-->
               </div>
             </div>
           </div>
@@ -144,29 +140,31 @@
                 <div class="widget-vs">
                   <div class="d-flex align-items-center justify-content-around justify-content-between w-100">
                     <div class="team-1 text-center">
-                      <img src="images/logo_1.png" alt="Image">
-                      <h3>Football League</h3>
+                      <img src="images/TeamA.png" alt="Image">
+                      <h3>[[${nextBasketballMatch.homeTeam}]]</h3>
                     </div>
                     <div>
                       <span class="vs"><span>VS</span></span>
                     </div>
                     <div class="team-2 text-center">
-                      <img src="images/logo_2.png" alt="Image">
-                      <h3>Soccer</h3>
+                      <img src="images/TeamB.png" alt="Image">
+                      <h3>[[${nextBasketballMatch.visitorTeam}]]</h3>
                     </div>
                   </div>
                 </div>
               </div>
 
               <div class="text-center widget-vs-contents mb-4">
-                <h4>World Cup League</h4>
+                <h3>NBA</h3>
                 <p class="mb-5">
-                  <span class="d-block">December 20th, 2020</span>
-                  <span class="d-block">9:30 AM GMT+0</span>
-                  <strong class="text-primary">New Euro Arena</strong>
+                  <span class="d-block">[[${nextBasketballMatch.startDate}]]</span>
+                  <span class="d-block">[[${nextBasketballMatch.startTime}]]</span>
+                  <strong class="text-primary">[[${nextBasketballMatch.arena}]]</strong>
                 </p>
 
-                <div id="date-countdown2" class="pb-1"></div>
+                <p>Current time:
+                <h3>[[${time}]]</h3>
+                </p>
               </div>
             </div>
           </div>
@@ -174,7 +172,7 @@
 
         <div class="row">
           <div class="col-12 title-section">
-            <h2 class="heading">Upcoming Match</h2>
+            <h2 class="heading">All Matches</h2>
           </div>
             
           <div class="col-lg-12">
@@ -191,11 +189,11 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="match: ${footballMatchs}">
-                  <td th:text="${match.teamA}"/>
-                  <td th:text="${match.teamB}"/>
-                  <td th:text="${match.date}"/>
-                  <td th:text="${match.time}"/>
+                <tr th:each="match: ${basketballMatches}">
+                  <td th:text="${match.homeTeam}"/>
+                  <td th:text="${match.visitorTeam}"/>
+                  <td th:text="${match.startDate}"/>
+                  <td th:text="${match.startTime}"/>
                 </tr>
                 </tbody>
               </table>
@@ -205,31 +203,46 @@
 		</div>
     </div> <!-- .site-section -->
 	</div>
+
+
 	<footer class="footer-section" style="margin: 0px; padding: 0px;">
       <div class="bg-light p-4">
-	  <div class="container">
+        <div class="container">
 
-        <div class="row text-center">
-          <div class="col-md-12">
-            <div class=" pt-4">
-              <p>
-                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                Copyright &copy;
-                <script>
-                  document.write(new Date().getFullYear());
-                </script> All rights reserved | This Site is created for <a href="https://www.accenture.com/" target="_blank">Accenture</a> Bootcamp Project
-                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-              </p>
+          <div class="row text-center">
+            <div class="col-md-12">
+              <div class=" pt-4">
+                <p>
+                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                  Copyright &copy;
+                  <script>
+                    document.write(new Date().getFullYear());
+                  </script> All rights reserved | This Site is created for <a href="https://www.accenture.com/" target="_blank">Accenture</a> Bootcamp Project
+                  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                </p>
+              </div>
             </div>
-          </div>
 
+          </div>
         </div>
       </div>
     </footer>
-  </div>
+
   
   <!-- .site-wrap -->
-
+    <script >
+window.onload = setInterval(clock,1000);
+function clock()
+{
+    var d = new Date();
+    var date = d.getDate();
+    var year = d.getFullYear();
+    var month = d.getMonth();
+    var monthArr = ["January", "February","March", "April", "May", "June", "July", "August", "September", "October", "November","December"];
+    month = monthArr[month];
+    document.getElementById("date").innerHTML="Current Date: "+date+" "+month+", "+year;
+}
+</script>
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/jquery-migrate-3.0.1.min.js"></script>
   <script src="js/jquery-ui.js"></script>
