--- a/src/main/resources/templates/football.html
+++ b/src/main/resources/templates/football.html
@@ -51,8 +51,8 @@
       <div class="container">
         <div class="d-flex align-items-center">
           <div class="site-logo">
-            <a href="index.html">
-              <img src="images/logo.png" alt="Logo">
+            <a href="/#">
+              <img src="images/SOCCER.png" alt="Logo">
             </a>
           </div>
           <div class="ml-auto">
