Updated from Sadaqit

--- a/src/main/resources/templates/wp-admin-1234footballadmin.html
+++ b/src/main/resources/templates/wp-admin-1234footballadmin.html
@@ -66,7 +66,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-5 ml-auto">
-          <h1 class="text-white">STS Admin Dashboard</h1>
+          <h1 class="text-white">STS Football Admin Dashboard</h1>
           <p id="date"></p>
         </div>
       </div>
