Last Updates from Sadaqit

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -202,7 +202,7 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <tr th:each="match: ${footballMatches}">
+                        <tr th:each="match: ${volleyballMatches}">
                             <td th:text="${match.teamA}"/>
                             <td th:text="${match.teamB}"/>
                             <td th:text="${match.date}"/>
