--- a/src/main/resources/templates/football.html
+++ b/src/main/resources/templates/football.html
@@ -61,7 +61,7 @@
               <li class="active"><a th:href="@{/}" class="nav-link">Home</a></li>
               <li><a th:href="@{football.html}" class="nav-link">Football</a></li>
               <li><a th:href="@{basketball.html}" class="nav-link">Basketball</a></li>
-              <li><a th:href="@{vollyball.html}" class="nav-link">Vollyball</a></li>
+              <li><a th:href="@{volleyball.html}" class="nav-link">Vollyball</a></li>
               <li><a th:href="@{contact.html}" class="nav-link">Contact</a></li>
             </ul>
           </nav>
@@ -102,9 +102,6 @@
               <h3>LA LEGA <span>(win)</span></h3>
               <ul class="list-unstyled">
                 <li>Anja Landry (7)</li>
-                <li>Eadie Salinas (12)</li>
-                <li>Ashton Allen (10)</li>
-                <li>Baxter Metcalfe (5)</li>
               </ul>
             </div>
           </div>
@@ -114,9 +111,6 @@
               <h3>JUVENDU <span>(loss)</span></h3>
               <ul class="list-unstyled">
                 <li>Macauly Green (3)</li>
-                <li>Arham Stark (8)</li>
-                <li>Stephan Murillo (9)</li>
-                <li>Ned Ritter (5)</li>
               </ul>
             </div>
           </div>
