--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -75,7 +75,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-7">
-          <form action="#" th:action="@{/wp-admin-1234footballadmin}" method="post" th:object="${admin}">
+          <form action="#" th:action="@{/wp-admin}" method="post" th:object="${admin}">
             <div class="form-group">
               <input type="text" th:field="*{userName}" class="form-control" placeholder="Name">
             </div>
