--- a/src/main/resources/templates/volleyball.html
+++ b/src/main/resources/templates/volleyball.html
@@ -79,128 +79,53 @@
         <div class="row align-items-center">
           <div class="col-lg-5 ml-auto">
             <h1 class="text-white">Volleyball Matches Schedule</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, molestias repudiandae pariatur.</p>
             <div id="date-countdown"></div>
             <p>
               <a href="#" class="btn btn-primary py-3 px-4 mr-3">Book Ticket</a>
               <a href="#" class="more light">Learn More</a>
-            </p>  
+            </p>
           </div>
         </div>
       </div>
     </div>
 
-    
-    
-    <div class="container">
-      
 
-      <div class="row">
-        <div class="col-lg-12">
-          
-          <div class="d-flex team-vs">
-            <span class="score">4-1</span>
-            <div class="team-1 w-50">
-              <div class="team-details w-100 text-center">
-                <img src="images/logo_1.png" alt="Image" class="img-fluid">
-                <h3>LA LEGA <span>(win)</span></h3>
-                <ul class="list-unstyled">
-                  <li>Anja Landry (7)</li>
-                  <li>Eadie Salinas (12)</li>
-                  <li>Ashton Allen (10)</li>
-                  <li>Baxter Metcalfe (5)</li>
-                </ul>
-              </div>
-            </div>
-            <div class="team-2 w-50">
-              <div class="team-details w-100 text-center">
-                <img src="images/logo_2.png" alt="Image" class="img-fluid">
-                <h3>JUVENDU <span>(loss)</span></h3>
-                <ul class="list-unstyled">
-                  <li>Macauly Green (3)</li>
-                  <li>Arham Stark (8)</li>
-                  <li>Stephan Murillo (9)</li>
-                  <li>Ned Ritter (5)</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  
 
-    
     <div class="site-section bg-dark">
       <div class="container">
-        
-        <div class="row mb-5">
-          <div class="col-lg-12">
-            <div class="widget-next-match">
-              <div class="widget-title">
-                <h3>Next Match</h3>
-              </div>
-              <div class="widget-body mb-3">
-                <div class="widget-vs">
-                  <div class="d-flex align-items-center justify-content-around justify-content-between w-100">
-                    <div class="team-1 text-center">
-                      <img src="images/logo_1.png" alt="Image">
-                      <h3>Football League</h3>
-                    </div>
-                    <div>
-                      <span class="vs"><span>VS</span></span>
-                    </div>
-                    <div class="team-2 text-center">
-                      <img src="images/logo_2.png" alt="Image">
-                      <h3>Soccer</h3>
-                    </div>
-                  </div>
-                </div>
-              </div>
 
-              <div class="text-center widget-vs-contents mb-4">
-                <h4>World Cup League</h4>
-                <p class="mb-5">
-                  <span class="d-block">December 20th, 2020</span>
-                  <span class="d-block">9:30 AM GMT+0</span>
-                  <strong class="text-primary">New Euro Arena</strong>
-                </p>
-
-                <div id="date-countdown2" class="pb-1"></div>
-              </div>
-            </div>
-          </div>
-        </div>
 
         <div class="row">
           <div class="col-12 title-section">
             <h2 class="heading">Upcoming Match</h2>
           </div>
-            
+
           <div class="col-lg-12">
-		  <div class="bg-light p-4 rounded">
-            
-            <div class="widget-next-match">
-              <table class="table custom-table">
-                <thead>
-                <tr>
-                  <th scope="col">Team A</th>
-                  <th scope="col">Team B</th>
-                  <th scope="col">Match Date</th>
-                  <th scope="col">Match Timing</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="match: ${footballMatchs}">
-                  <td th:text="${match.teamA}"/>
-                  <td th:text="${match.teamB}"/>
-                  <td th:text="${match.date}"/>
-                  <td th:text="${match.time}"/>
-                </tr>
-                </tbody>
-              </table>
-            </div>			
+            <div class="bg-light p-4 rounded">
+
+              <div class="widget-next-match">
+                <table class="table custom-table">
+                  <thead>
+                  <tr>
+                    <th scope="col">Team A</th>
+                    <th scope="col">Team B</th>
+                    <th scope="col">Match Date</th>
+                    <th scope="col">Match Timing</th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  <tr th:each="match: ${volleyballMatches}">
+                    <td th:text="${match.teamA}"/>
+                    <td th:text="${match.teamB}"/>
+                    <td th:text="${match.date}"/>
+                    <td th:text="${match.time}"/>
+                  </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
           </div>
+        </div>
 		  </div>
 		</div>
     </div> <!-- .site-section -->
@@ -227,7 +152,7 @@
       </div>
     </footer>
   </div>
-  
+
   <!-- .site-wrap -->
 
   <script src="js/jquery-3.3.1.min.js"></script>
