Working version volleyball service

--- a/src/main/resources/templates/football.html
+++ b/src/main/resources/templates/football.html
@@ -61,7 +61,7 @@
               <li class="active"><a th:href="@{/}" class="nav-link">Home</a></li>
               <li><a th:href="@{football.html}" class="nav-link">Football</a></li>
               <li><a th:href="@{basketball.html}" class="nav-link">Basketball</a></li>
-              <li><a th:href="@{volleyball.html}" class="nav-link">Vollyball</a></li>
+              <li><a th:href="@{volleyball.html}" class="nav-link">Volleyball</a></li>
               <li><a th:href="@{contact.html}" class="nav-link">Contact</a></li>
             </ul>
           </nav>
