--- a/src/main/resources/templates/volleyball.html
+++ b/src/main/resources/templates/volleyball.html
@@ -90,11 +90,49 @@
     <div class="site-section bg-dark">
       <div class="container">
 
+        <div class="row mb-5">
+          <div class="col-lg-12">
+            <div class="widget-next-match">
+              <div class="widget-title">
+                <h3>Next Match</h3>
+              </div>
+              <div class="widget-body mb-3">
+                <div class="widget-vs">
+                  <div class="d-flex align-items-center justify-content-around justify-content-between w-100">
+                    <div class="team-1 text-center">
+                      <img src="images/logo_1.png" alt="Image">
+                      <h3>[[${nextMatch.teamA}]]</h3>
+                    </div>
+                    <div>
+                      <span class="vs"><span>VS</span></span>
+                    </div>
+                    <div class="team-2 text-center">
+                      <img src="images/logo_2.png" alt="Image">
+                      <h3>[[${nextMatch.teamB}]]</h3>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="text-center widget-vs-contents mb-4">
+                <h4>FIVB League</h4>
+                <p class="mb-5">
+                  <span class="d-block">[[${nextMatch.date}]]</span>
+                  <span class="d-block">[[${nextMatch.time}]]</span>
+                  <strong class="text-primary">Boston</strong>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
 
         <div class="row">
           <div class="col-12 title-section">
             <h2 class="heading">Upcoming Match</h2>
           </div>
+
+
 
           <div class="col-lg-12">
             <div class="bg-light p-4 rounded">
